data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3278.wast
;; 7. **Test Call with Incorrect Operand Stack**:    Execute a call after manipulating the stack improperly (e.g., missing arguments). This checks if the implementation correctly identifies the error and falls into an `unreachable` instruction or traps as expected.

(assert_invalid
  (module
    (func $incorrect-operand-stack
      (i32.const 42)
      (call 1)
    )
    (func (param i32 i32))
  )
  "type mismatch"
)